--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -11,24 +11,24 @@ jobs:
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
     
     - name: Install dependencies
       run: |
         pip install papermill nbconvert jupyter
-        pip install -r requirements.txt  # if you have one
+        # pip install -r requirements.txt  # uncomment if you have one
     
     - name: Execute notebook
       run: |
         papermill your-notebook.ipynb output-notebook.ipynb
     
     - name: Upload results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: notebook-results
         path: output-notebook.ipynb
