--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -3,33 +3,38 @@ name: Run Colab Notebook
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   run-notebook:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      run: |
-        pip install papermill nbconvert jupyter
-        # pip install -r requirements.txt  # uncomment if you have one
 
-    - name: Execute notebook
-      env: ${{ secrets }}
-      run: |
-        papermill ViralLoopYT.ipynb output-notebook.ipynb
-    
-    - name: Upload results
-      uses: actions/upload-artifact@v4
-      with:
-        name: notebook-results
-        path: output-notebook.ipynb
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install system dependencies (REQUIRED)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
+      - name: Install Python dependencies
+        run: |
+          pip install papermill nbconvert jupyter
+          # pip install -r requirements.txt
+
+      - name: Execute notebook
+        env: ${{ secrets }}
+        run: |
+          papermill ViralLoopYT.ipynb output-notebook.ipynb
+
+      - name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: notebook-results
+          path: output-notebook.ipynb
