--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -36,4 +36,5 @@ jobs:
           YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
           YT_TOKEN: ${{ secrets.YT_TOKEN }}
           APIFY_TOKEN: ${{ secrets.APIFY_TOKEN }}
+          TOKEN_MIDNIGHTMOTIVATION: ${{ secrets.TOKEN_MIDNIGHTMOTIVATION }}
         run: python ViralLoopYT.py
